package src.Cartes;

public class CartesMain {
    public void tirerCarteDuDeck(Deck deck) {

    }

    public void enleverCarteDuDeck(Deck deck) {

    }

}
