package src.Cartes;

public class Programme {
    public void enfilerCarteDeCartesMain(CartesMain cartesMain) {

    }

    public void defilerCarteDeCartesMain(CartesMain cartesMain) {

    }
}
