package src.Cartes;

public enum TypeCarte {
    CARTE_BLEUE,
    CARTE_JAUNE,
    CARTE_VIOLETTE,
    LASER
}
