package src;

import org.jetbrains.annotations.Contract;

public class Case {
    int x;
    int y;
    char contenu;

    public Case(int x_, int y_, char contenu_) {
        x = x_;
        y = y_;
        contenu = contenu_;
    }
}
