package src;

public class Main {
    public static void main(String args[]) {
        LogiqueDeJeu logiqueDeJeu = new LogiqueDeJeu();

        logiqueDeJeu.initialiserPartie();
//        logiqueDeJeu.lancerPartie();

    }
}
