@startuml
class Main
Main -- LogiqueDeJeu

class LogiqueDeJeu {
+ nombreJoueurs: int
+ focusJoueur: int
+ gameOver: boolean
+ main(): void
+ demanderNombreJoueurs(): int
+ initJoueurs(nombreJoueurs): void
}

class Plateau {
- taillePlateau: int
+ initPLateau(): void
+ getCase(int, int): char
+ setCase(): void
+ getCaseSuivante(Tortue): Case
}
Plateau -- Main

class Case {
- x: int
- y: int
- valeur: char
}
Case --* Plateau

abstract class Tuile {
# position: Position
+ getPosition(Tuile): Position
+ setPotision(int, int): void
+ gererCollision()
}
Tuile -- Main
Tuile --* Plateau

enum Directions {
+ UP
+ LEFT
+ DOWN
+ RIGHT
}

class Position {
- x: int
- y: int
- orientation: Directions
}
Position o-- Tuile
Position -- Directions

class Tortue {
+ avancer(): void
+ tournerHoraire(): void
+ tournerAntiHoraire(): void
+ lancerLaser(): void
}
Tortue --|> Tuile
Tortue --* Joueur

class Joyau {
+ estEncercle(): boolean
}
Joyau --|> Tuile

class Obstacle {
+ poseValide(): boolean
}
Obstacle --|> Tuile

class MurDeGlace {

}
MurDeGlace --|> Obstacle

class MurDePierre {

}
MurDePierre --|> Obstacle

class Joueur {
- tortue: Tortue
- mursDePierre: int
- mursDeGlace: int
+ placerMur(Obstacle, int, int): void
+ completerProgramme(Programme, CartesMain): void
+ executerProgramme(Programme): void
}
Joueur -- Main

enum TypeCarte {
CarteBleue
CarteJaune
CarteViolette
Laser
}

class Carte {
- typeCarte: TypeCarte
+ getTypeCarte(Carte): TypeCarte
}
Carte -- TypeCarte

class Deck {
- ArrayList<Carte>
}
Deck - CartesMain
Deck --* Joueur
Deck -- Carte

class CartesMain {
+ tirerCarteDuDeck(Deck): void
+ enleverCarteDuDeck(Deck): void
}
CartesMain - Programme
CartesMain --* Joueur
CartesMain -- Carte

class Programme {
+ enfilerCarteDeCartesMain(CartesMain): void
+ defilerCarteDeCartesMain(CartesMain): void
}
Programme - Deck
Programme --* Joueur
Programme -- Carte

interface Affichage {
+ afficherPlateau(): void
+ ...()
}
Affichage -- Main

class InterfaceGraphique {
+ afficherPlateau(): void
+ ...()
}
InterfaceGraphique ..|> Affichage

class InterfaceConsole {
+ afficherPlateau(): void
+ ...()
}
InterfaceConsole ..|> Affichage
@enduml